Starting to make layout changes

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Kiran Raj
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Kiran Raj!</h1>
+	<h1>Hi there, I'm Kiran Raj..</h1>
 	<p>A pragmatic web developer. <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
