--- a/index.html
+++ b/index.html
@@ -2,7 +2,15 @@
 layout: default
 title: Kiran Raj
 ---
-<div class="blurb">
-	<h1>Hi there, I'm Kiran Raj..</h1>
-	<p>A pragmatic web developer. <a href="/about">Read more about my life...</a></p>
-</div><!-- /.blurb -->
+
+<section>
+	<div class="card">
+		<div class="box">
+			<!--<img src="/assets/img/mypic.jpg" alt="Kiran Raj">-->
+		</div>
+	</div>
+	<div class="content">
+		
+	</div>
+
+</section>
