--- a/index.html
+++ b/index.html
@@ -4,13 +4,22 @@ title: Kiran Raj
 ---
 
 <section>
-	<div class="card">
-		<div class="box">
-			<!--<img src="/assets/img/mypic.jpg" alt="Kiran Raj">-->
+	<div class="box">
+		<div class="card">
+			<img src="/assets/img/mypic.jpg" alt="Kiran Raj">
+			<div class="card-details">
+				<h3>Kiran Raj</h3>
+				<h5>Web developer</h5>
+			</div>
+			<div class="social">
+				<i class="fa fa-linkedin" aria-hidden="true"></i>
+				<i class="fa fa-twitter" aria-hidden="true"></i>
+				<i class="fa fa-github" aria-hidden="true"></i>
+				<i class="fa fa-envelope" aria-hidden="true"></i>
+				<i class="fa fa-stack-overflow" aria-hidden="true"></i>
+			</div>
 		</div>
 	</div>
 	<div class="content">
-		
 	</div>
-
 </section>
