--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Kiran Raj
+title: Coding Cooker | Web development, programming and outrageous philosopy!
 ---
 
 <section>
@@ -21,5 +21,7 @@ title: Kiran Raj
 		</div>
 	</div>
 	<div class="content">
+		<h1>Suit up!</h1>
+		<p>My space where I write random articles on web development and philosopy in general. </p>
 	</div>
 </section>
