--- a/index.html
+++ b/index.html
@@ -3,25 +3,6 @@ layout: default
 title: Coding Cooker | Web development, programming and outrageous philosopy!
 ---
 
-<section>
-	<div class="box">
-		<div class="card">
-			<img src="/assets/img/mypic.jpg" alt="Kiran Raj">
-			<div class="card-details">
-				<h3>Kiran Raj</h3>
-				<h5>Web developer</h5>
-			</div>
-			<div class="social">
-				<i class="fa fa-linkedin" aria-hidden="true"></i>
-				<i class="fa fa-twitter" aria-hidden="true"></i>
-				<i class="fa fa-github" aria-hidden="true"></i>
-				<i class="fa fa-envelope" aria-hidden="true"></i>
-				<i class="fa fa-stack-overflow" aria-hidden="true"></i>
-			</div>
-		</div>
-	</div>
-	<div class="content">
-		<h1>Suit up!</h1>
-		<p>My space where I write random articles on web development and philosopy in general. </p>
-	</div>
-</section>
+<div>
+	test
+</div>
