--- a/index.html
+++ b/index.html
@@ -2,7 +2,48 @@
 layout: default
 title: Coding Cooker | Web development, programming and outrageous philosopy!
 ---
-
-<div>
-	test
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+            <div class="box card">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                        <img src="/assets/img/mypic.jpg" alt="Kiran Raj">
+                    </div>
+                </div>
+                <div class="row center-xs">
+                    <div class="col-xs-12">
+                        <p class="name"><strong>Kiran Raj</strong></p>
+                        <p class="title">Web developer</p>
+                    </div>
+                </div>
+                <div class="row center-xs social">
+                    <div class="col-xs-2">
+                        <!--<div class="social">-->
+                        <i class="fa fa-linkedin" aria-hidden="true"></i>
+                    </div>
+                    <div class="col-xs-2">
+                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                    </div>
+                    <div class="col-xs-2">
+                        <i class="fa fa-github" aria-hidden="true"></i>
+                    </div>
+                    <div class="col-xs-2">
+                        <i class="fa fa-envelope" aria-hidden="true"></i>
+                    </div>
+                    <div class="col-xs-2">
+                        <i class="fa fa-stack-overflow" aria-hidden="true"></i>
+                    </div>
+                    <!--</div>-->
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row end-sm end-md end-lg">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+            <div class="box">
+                <p>Suit up!</p>
+            </div>
+        </div>
+    </div>
 </div>
