added home page

--- a/home/index.html
+++ b/home/index.html
@@ -5,7 +5,7 @@
 			<!-- Basic Page Needs  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 			<meta charset="utf-8">
 			<meta http-equiv="x-ua-compatible" content="ie=edge">
-			<title>testt</title>
+			<title>Kiran Raj</title>
 			<meta name="description" content="">
 			<meta name="author" content="Kiran Raj">
 
@@ -25,10 +25,39 @@
 			<!-- Favicon –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 			<link rel="icon" type="image/png" href="codingcooker.png">
 		</head>
-		<body class="Home-Site Site-main">
-			<!--<script src="https://use.fontawesome.com/d7a7b893fb.js"></script>-->
-            <header class="home">
-                <h1>&lt; Kiran Raj &sol;&gt; </h1>
-            </header>
+		<body class="Home-Site">
+								
+			<header>
+				<nav class="Home-Nav">
+					<a class="Home-Nav-Trigger" href="javascript:void(0)" onclick="openNav()">
+						<i class="fa fa-bars fa-lg" aria-hidden="true"></i>
+						<span aria-hidden="true"></span>
+					</a>
+
+					<div id="myNav" class="overlay">
+						<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+						<div class="overlay-content">
+							<ul>
+								<li><a href="#0" class="active"><span>Home</span></a></li>
+								<li><a href="#0"><span>Portfolio</span></a></li>
+								<li><a href="#0"><span>Services</span></a></li>
+								<li><a href="#0"><span>Store</span></a></li>
+								<li><a href="#0"><span>Contact</span></a></li>
+							</ul>								
+						</div>
+
+					</div>
+				</nav>
+			</header>
+
+			<main class="Home-Main">
+				<!-- main content here -->
+				<h1>Kiran Raj</h1>
+				<p>Developer</p>
+			</main>
+
+			<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+			<script src="/assets/js/main.js"></script>
+			<script src="https://use.fontawesome.com/d7a7b893fb.js"></script>
 		</body>
 	</html>
