--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Coding Cooker | Web development, programming and outrageous philosopy!
+title: Coding Cooker | Recipe's for modern web development
 ---
 
 <section class="posts">
