--- a/about/index.html
+++ b/about/index.html
@@ -13,11 +13,11 @@
 				</div>
 				<div class="author-social">
 					<ul>
-						<li><i class="fa fa-linkedin" aria-hidden="true"></i></li>
-						<li><i class="fa fa-twitter" aria-hidden="true"></i></li>
-						<li><i class="fa fa-github" aria-hidden="true"></i></li>
-						<li><i class="fa fa-stack-overflow" aria-hidden="true"></i></li>
-						<li><i class="fa fa-envelope" aria-hidden="true"></i></li>
+						<li><a href="https://in.linkedin.com/in/akiranraj"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+						<li><a href="https://twitter.com/anugulakiranraj"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+						<li><a href="https://github.com/codingcooker"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+						<li><a href="http://stackexchange.com/users/10104678/kiran-raj"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a></li>
+						<li><a href="mailto:kiranraj.anugula@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
 					</ul>
 				</div>
 			</div>
